[package]
name = "dioxus-coscos-example"
edition = "2021"
version = "0.0.0"
description = "An example of COmponent SCOped Styling in Dioxus."
license = "MIT OR Apache-2.0"
repository = "https://github.com/DioxusLabs/dioxus/"
homepage = "https://dioxuslabs.com"
documentation = "https://dioxuslabs.com"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../packages/dioxus", features=["coscos_feature"] }
dioxus-web = { path = "../../packages/web" }
dioxus-desktop = {path = "../../packages/desktop" }